make sure text in lesson name stays left-aligned

--- a/services/QuillLMS/app/assets/stylesheets/pages/dashboard.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/dashboard.scss
@@ -437,6 +437,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      text-align: left;
     }
   }
 }
